--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT = 5000
 PGPORT = 5432
-PGHOST = localhost
+PGHOST = todo-list-extended.herokuapp.com
 PGDATABASE = 'test'
 PGUSER = 'postgres'
 PGPASSWORD = '123'
+
