--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 # PORT = 5000  
-PGPORT = 5432  
-PGHOST = localhost  
-PGDATABASE = 'test'
-PGUSER = 'postgres'    
-PGPASSWORD = '123'  
+# PGPORT = 5432    
+# PGHOST = localhost    
+# PGDATABASE = 'test'  
+# PGUSER = 'postgres'      
+# PGPASSWORD = '123'    
   
